--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,32 @@
-# Name ?
-- Answer Set Programming Efficient & Recursive Graph Edition (asperge)
-- Answer Set Programming Efficient & Recursive Graph Compression (aspergc)
-- Answer Set Programming Recursive Graph Compression (asprgc) [CURRENT]
-- Answer Set Programming Efficient & Compression T? (aspect, already taked)
+# PowerGrASP
+The Python Powergraph analysis tool, based on Answer Set Programming solving and formal concept analysis.
+
+## Requirements
+Needs [python-gringo module](https://github.com/lxsli/python-gringo).
+Unfortunately, you will need to compile clingo yourself, for includes the python support. This can be a pain.
+
+## Basic use
+PowerGrASP can be used as a script:
+
+    python2 powergrasp --graph-data=human\_proteom.lp --output-file=for\_cytoscape.bbl
+
+Or can be embedded in any python program:
+
+    import powergrasp
+
+    with open('human_proteom.lp') as fin, open('for\_cytoscape.bbl', 'w') as fout,
+    fout.write(powergrasp.compress(fin.read()))
+
+## Help & Details
+The compression is configurable through command line arguments or compress function parameters.
+Used ASP source code can be changed, interactive mode can be set,… Please look at help and docstring:
+
+    # in terminal
+    python2 powergrasp --help
+    # in python
+    help(powergrasp)
+
+
+
+
+
