README explains that file doc/help.mkd can help

--- a/README.mkd
+++ b/README.mkd
@@ -3,7 +3,8 @@ The Python Powergraph analysis tool, based on Answer Set Programming solving and
 
 ## Requirements
 Needs [python-gringo module](https://github.com/lxsli/python-gringo).
-Unfortunately, you will need to compile clingo yourself, for includes the python support. This can be a pain.
+Unfortunately, you will need to compile clingo yourself, for includes the python support.
+This can be a pain, but maybe the little help (in french, infortunately) given by *doc/help.mkd*.
 
 ## Basic use
 PowerGrASP can be used as a script:
