--- a/README.mkd
+++ b/README.mkd
@@ -1,6 +1,6 @@
 # PowerGrASP
 The Python Powergraph analysis tool, based on Answer Set Programming solving and formal concept analysis.
-
+More documentation about PowerGrASP can be found in the [documentation file](https://github.com/Aluriak/PowerGrASP/blob/master/doc/documentation.mkd).
 
 ## Requirements
 Needs [python-gringo module](https://github.com/lxsli/python-gringo).
@@ -88,6 +88,7 @@ Other formats will be supported in the future.
 #### Output file
 While the only way to print a power graph is provided by the [CyOog](http://www.biotec.tu-dresden.de/research/schroeder/powergraphs/) plugin of Cytoscape, output format is limited to *Bubble*, which seems to be an endemic format.
 Another output format support is possible by create a new Converter class (see *powergrasp/converter/*).
+Cytoscape, for using the CyOog plugin, must be in version __[2.x](http://www.cytoscape.org/download_old_versions.html)__.
 
 
 
